src/test/deca/context/valid/tests/14_NoInitialization.deca
// Description:
//    Test NoInitialization()
//
// Historique:
//    cree le 16/01/2022

{
        int x;
        println(x);
}
